--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Mradul Gautam
-#logo:
-Description: 
+logo: /assets/dp.jpeg
+Description: Portfolio
 #show_downloads: true
 theme: jekyll-theme-minimal
