--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Mradul Gautam
 logo: dp.jpeg
-#Description: Portfolio
-#show_downloads: true
+Description: Contact : +1 614 687 0091
+show_downloads: true
 theme: jekyll-theme-minimal
