--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Mradul Gautam
-logo: dp.jpeg
+logo: image (1).png
 description: Mobile +1 614 687 0091
 show_downloads: true
 theme: jekyll-theme-minimal
